<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="TS GOT TALENT"
        android:textColor="#eb9834"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/username"
        android:hint="@string/user_email_id"
        android:inputType="textEmailAddress"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textview1"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/username"/>

    <EditText
        android:id="@+id/cfpassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/password"/>

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/cfpassword"/>

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/existing_user_go_to_sign_in_pages"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btnsignup"/>




</RelativeLayout>
